# DRF-Education-Platform-API

./: .coveragerc  .env.docker  .env.docker.example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  load.json  pyproject.toml
.github/workflows/: ci.yml
config/: __init__.py  celery.py  settings.py  urls.py
materials/: admin.py  models.py  serializers.py  tasks.py  test.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_subscription.py  0004_alter_course_options.py  0005_alter_lesson_course.py  0006_alter_course_owner.py  0007_course_created_at_course_last_update.py  0008_alter_course_created_at_alter_course_last_update.py  0009_module_lesson_module.py  0010_lawyercase_materialguide_materialtemplate.py
nginx/: Dockerfile  nginx.conf
users/: admin.py  api_urls.py  models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: csu.py  generate_payments.py
users/migrations/: 0001_initial.py  0002_payments.py  0003_alter_payments_options_alter_payments_payed_course_and_more.py  0004_payments_link.py  0005_alter_payments_link.py
users/templates/: auth-login.html  landing-gold.html  landing-green.html  landing-page.html  single-page-applicaion.html  single-page-application2.html  test-landing.html
